# cesizen

./: .envrc  .gitignore  README.md  flake.nix  git-z.toml  rust-toolchain.toml
backend/: .formatter.exs  .gitignore  README.md  mix.exs
backend/assets/: tailwind.config.js
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/: cesizen.ex  cesizen_web.ex
backend/lib/cesizen/: accounts.ex  application.ex  emotions.ex  information.ex  mailer.ex  repo.ex  users.ex
backend/lib/cesizen/accounts/: token.ex  user.ex
backend/lib/cesizen/emotions/: basic_emotion.ex  emotion.ex
backend/lib/cesizen/information/: category.ex  content.ex
backend/lib/cesizen/users/: token.ex  user.ex  user_emotion.ex
backend/lib/cesizen_web/: ash_json_api_router.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
backend/lib/cesizen_web/components/: core_components.ex  layouts.ex
backend/lib/cesizen_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
backend/priv/repo/: seeds.exs
backend/test/: test_helper.exs
backend/test/support/: conn_case.ex  data_case.ex
frontend/: .gitignore  Cargo.toml
frontend/cesizen-api/: Cargo.toml
frontend/cesizen-api/src/: api.rs
frontend/cesizen-api/src/api/: information_category.rs  information_content.rs  json_api.rs  user.rs
frontend/cesizen-app/: Cargo.toml  Dioxus.toml  package-lock.json
frontend/cesizen-app/src/: main.rs
frontend/cesizen-helpers/: Cargo.toml
frontend/cesizen-helpers/src/: helpers.rs  lib.rs  tracing.rs
scripts/: reset-db  start-tailwind
(+41 files in other folders)
